# xir

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: MLIR.cmake  StableHLO.cmake
examples/: AttrType.cpp  BuildOps.cpp  CMakeLists.cmake  ConstantOp.cpp  EquivalenceClassesDemo.cpp  LLVMContainerDemo.cpp  ParseAndPrint.cpp  SymbolTableDemo.cpp  demo.cpp
include/xir/: CMakeLists.txt
include/xir/Dialect/Foo/: CMakeLists.txt
include/xir/Dialect/Foo/IR/: CMakeLists.txt  Foo.h  FooBase.td  FooOps.td
include/xir/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/Dialect/: CMakeLists.txt
lib/Dialect/Foo/IR/: CMakeLists.txt  FooDialect.cpp  FooOps.cpp
lib/Transforms/: CMakeLists.txt  PrintDefUse.cpp  PrintIRStructure.cpp  TestApplyPatterns.cpp
testdata/: addi.mlir  def-use.mlir  duplicate-ops.mlir  foo.mlir  ir-structure.mlir  shape-function.mlir
tools/: CMakeLists.txt
tools/xir-opt/: CMakeLists.txt  main.cpp
tools/xir-translate/: main.cpp
